Archive2/1a/7d784e0538bedf/output
main.cpp: In function 'int safe(double, double)':
main.cpp:6:5: error: 'fstream' was not declared in this scope
     fstream out;
     ^
main.cpp:6:5: note: suggested alternative:
In file included from /usr/include/c++/4.8/ios:38:0,
                 from /usr/include/c++/4.8/istream:38,
                 from /usr/include/c++/4.8/fstream:38,
                 from main.cpp:1:
/usr/include/c++/4.8/iosfwd:163:33: note:   'std::fstream'
   typedef basic_fstream<char>   fstream;
                                 ^
main.cpp:6:13: error: expected ';' before 'out'
     fstream out;
             ^
main.cpp:7:5: error: 'out' was not declared in this scope
     out.open("data.txt", ios::out);
     ^
main.cpp:7:26: error: 'ios' has not been declared
     out.open("data.txt", ios::out);
                          ^
main.cpp:9:14: error: expected primary-expression before ')' token
   out << (*It).name << " \n";         
              ^
main.cpp:10:14: error: expected primary-expression before ')' token
   out << (*It).surname << " \n";
              ^
main.cpp:11:14: error: expected primary-expression before ')' token
   out << (*It).games << " " << (*It).won << " " << (*It).same << " " << 
              ^
main.cpp:11:36: error: expected primary-expression before ')' token
   out << (*It).games << " " << (*It).won << " " << (*It).same << " " << 
                                    ^
main.cpp:11:56: error: expected primary-expression before ')' token
   out << (*It).games << " " << (*It).won << " " << (*It).same << " " << 
                                                        ^
main.cpp:12:7: error: expected primary-expression before ')' token
   (*It).lost << " "<< (*It).money << "\n";
       ^
main.cpp:12:27: error: expected primary-expression before ')' token
   (*It).lost << " "<< (*It).money << "\n";
                           ^
main.cpp:15:10: error: expected '}' at end of input
  return 0;
          ^
